--- a/frontend/src/main/frontend/src/app/app.component.html
+++ b/frontend/src/main/frontend/src/app/app.component.html
@@ -1,9 +1,4 @@
 <div class="col-xs-8 col-xs offset-2">
-  <button class="btn btn-primary" (click)="onClickButton()">Load cars</button>
-  <hr>
-  <ul class="list-group">
-    <li class="list-group-item" *ngFor="let car of cars">
-      <span class="badge">{{car.id}}</span>{{car.name}}
-    </li>
-  </ul>
+  <h1>Static</h1>
+  <router-outlet></router-outlet>
 </div>
