--- a/frontend/src/main/frontend/src/app/login/login.component.html
+++ b/frontend/src/main/frontend/src/app/login/login.component.html
@@ -1,18 +1,50 @@
-<form>
-  <div class="form-group">
-    <label for="exampleInputEmail1">Email address</label>
-    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
-    <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+<div class="auth">
+  <div class="auth-container">
+    <div class="card">
+      <header class="auth-header">
+        <h1 class="auth-title">
+          <div class="logo">
+            <span class="l l1"></span>
+            <span class="l l2"></span>
+            <span class="l l3"></span>
+            <span class="l l4"></span>
+            <span class="l l5"></span>
+          </div>
+          Генератор Java кода
+        </h1>
+      </header>
+      <div class="auth-content">
+        <p class="text-xs-center">Войдите для работы</p>
+        <form>
+          <div class="form-group">
+            <label for="email">Email</label>
+            <input
+              type="text"
+              class="form-control underlined"
+              id="email"
+              placeholder="Введите ваш email"
+            >
+          </div>
+          <div class="form-group">
+            <label for="password">Пароль</label>
+            <input
+              type="password"
+              class="form-control underlined"
+              id="password"
+              placeholder="Пароль"
+            >
+          </div>
+          <div class="form-group">
+            <button type="submit" class="btn btn-block btn-primary">Войти</button>
+          </div>
+          <div class="form-group">
+            <p class="text-muted text-xs-center">
+              Нет аккаунта? <a href="#">Зарегистрироваться!</a>
+            </p>
+          </div>
+        </form>
+      </div>
+    </div>
   </div>
-  <div class="form-group">
-    <label for="exampleInputPassword1">Password</label>
-    <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
-  </div>
-  <div class="form-check">
-    <label class="form-check-label">
-      <input type="checkbox" class="form-check-input">
-      Check me out
-    </label>
-  </div>
-  <button type="submit" class="btn btn-primary">Submit</button>
-</form>
+</div>
+
