--- a/frontend/src/main/frontend/src/app/auth/login/login.component.html
+++ b/frontend/src/main/frontend/src/app/auth/login/login.component.html
@@ -1,50 +1,30 @@
-<div class="auth">
-  <div class="auth-container">
-    <div class="card">
-      <header class="auth-header">
-        <h1 class="auth-title">
-          <div class="logo">
-            <span class="l l1"></span>
-            <span class="l l2"></span>
-            <span class="l l3"></span>
-            <span class="l l4"></span>
-            <span class="l l5"></span>
-          </div>
-          Генератор Java кода
-        </h1>
-      </header>
-      <div class="auth-content">
-        <p class="text-xs-center">Войдите для работы</p>
-        <form>
-          <div class="form-group">
-            <label for="email">Email</label>
-            <input
-              type="text"
-              class="form-control underlined"
-              id="email"
-              placeholder="Введите ваш email"
-            >
-          </div>
-          <div class="form-group">
-            <label for="password">Пароль</label>
-            <input
-              type="password"
-              class="form-control underlined"
-              id="password"
-              placeholder="Пароль"
-            >
-          </div>
-          <div class="form-group">
-            <button type="submit" class="btn btn-block btn-primary">Войти</button>
-          </div>
-          <div class="form-group">
-            <p class="text-muted text-xs-center">
-              Нет аккаунта? <a href="#">Зарегистрироваться!</a>
-            </p>
-          </div>
-        </form>
-      </div>
-    </div>
+<p class="text-xs-center">Войдите для работы</p>
+<form>
+  <div class="form-group">
+    <label for="email">Email</label>
+    <input
+      type="text"
+      class="form-control underlined"
+      id="email"
+      placeholder="Введите ваш email"
+    >
   </div>
-</div>
+  <div class="form-group">
+    <label for="password">Пароль</label>
+    <input
+      type="password"
+      class="form-control underlined"
+      id="password"
+      placeholder="Пароль"
+    >
+  </div>
+  <div class="form-group">
+    <button type="submit" class="btn btn-block btn-primary">Войти</button>
+  </div>
+  <div class="form-group">
+    <p class="text-muted text-xs-center">
+      Нет аккаунта? <a routerLink="/registration">Зарегистрироваться!</a>
+    </p>
+  </div>
+</form>
 
