--- a/frontend/src/main/frontend/src/app/auth/registration/registration.component.html
+++ b/frontend/src/main/frontend/src/app/auth/registration/registration.component.html
@@ -1,12 +1,13 @@
 <p class="text-xs-center">Регистрация для получения доступа</p>
-<form>
+<form [formGroup]="form" (ngSubmit)="onSubmit()">
   <div class="form-group">
-    <label for="email">Email</label>
+    <label for="username">Email</label>
     <input
       type="text"
       class="form-control underlined"
-      id="email"
-      placeholder="Введите email"
+      id="username"
+      placeholder="Введите username"
+      formControlName="username"
     >
   </div>
   <div class="form-group has-error">
@@ -16,6 +17,7 @@
       class="form-control underlined"
       id="password"
       placeholder="Введите пароль"
+      formControlName="password"
     >
     <span class="form-help-text">Error message.</span>
   </div>
@@ -26,17 +28,40 @@
       class="form-control underlined"
       id="name"
       placeholder="Введите имя"
+      formControlName="name"
     >
     <span class="form-help-text">Success message.</span>
   </div>
+  <div class="form-group has-success">
+    <label for="nickName">Nick</label>
+    <input
+      type="text"
+      class="form-control underlined"
+      id="nickName"
+      placeholder="Введите nickname"
+      formControlName="nickName"
+    >
+    <span class="form-help-text">Success message.</span>
+  </div>
+  <div class="form-group has-error">
+    <label for="dateBirthday">Birthday</label>
+    <input
+      type="date"
+      class="form-control underlined"
+      id="dateBirthday"
+      placeholder="Введите date of birthday"
+      formControlName="dateBirthday"
+    >
+    <span class="form-help-text">Error message.</span>
+  </div>
   <div class="form-group">
     <label for="agree">
-      <input class="checkbox" id="agree" type="checkbox">
+      <input class="checkbox" id="agree" type="checkbox" formControlName="agree">
       <span>Согласен с правилами</span>
     </label>
   </div>
   <div class="form-group">
-    <button type="submit" class="btn btn-block btn-primary">Зарегистрироваться</button>
+    <button [disabled] = "form.invalid" type="submit" class="btn btn-block btn-primary">Зарегистрироваться</button>
   </div>
   <div class="form-group">
     <p class="text-muted text-xs-center">
