--- a/frontend/src/main/frontend/src/app/auth/login/login.component.html
+++ b/frontend/src/main/frontend/src/app/auth/login/login.component.html
@@ -1,7 +1,8 @@
 <p class="text-xs-center">Войдите для работы</p>
 <form [formGroup]="form" (ngSubmit)="onSubmit()">
 
-  <div class="form-group" [ngClass]="{'has-error': form.get('email').invalid && form.get('email').touched}">
+  <div class="form-group"
+       [ngClass]="{'has-error': form.get('email').invalid && form.get('email').touched}">
     <label for="email">Email</label>
     <input
       type="text"
@@ -38,7 +39,7 @@
   </div>
   <div class="form-group">
     <p class="text-muted text-xs-center">
-      Нет аккаунта? <a routerLink="/registration">Зарегистрироваться!</a>
+      Нет аккаунта? <a [routerLink]="'/registration'">Зарегистрироваться!</a>
     </p>
   </div>
 </form>
