--- a/frontend/src/main/frontend/src/app/auth/registration/registration.component.html
+++ b/frontend/src/main/frontend/src/app/auth/registration/registration.component.html
@@ -1,16 +1,24 @@
 <p class="text-xs-center">Регистрация для получения доступа</p>
 <form [formGroup]="form" (ngSubmit)="onSubmit()">
-  <div class="form-group">
+
+  <div class="form-group"
+       [ngClass]="{'has-error': form.get('username').invalid && form.get('username').touched}">
     <label for="username">Email</label>
     <input
       type="text"
       class="form-control underlined"
       id="username"
-      placeholder="Введите username"
+      placeholder="Введите email"
       formControlName="username"
     >
+    <span class="form-help-text" *ngIf="form.get('username').invalid && form.get('username').touched">
+      <span *ngIf="form.get('username')['errors']['required']">Логин не может быть пустым</span>
+      <span *ngIf="form.get('username')['errors']['email'] && !form.get('username')['errors']['required']">Введите правильный логин</span>
+    </span>
   </div>
-  <div class="form-group has-error">
+
+  <div class="form-group"
+       [ngClass]="{'has-error': form.get('password').invalid && form.get('password').touched}">
     <label for="password">Пароль</label>
     <input
       type="password"
@@ -19,9 +27,17 @@
       placeholder="Введите пароль"
       formControlName="password"
     >
-    <span class="form-help-text">Error message.</span>
+    <span class="form-help-text" *ngIf="form.get('password').invalid && form.get('password').touched">
+      <span *ngIf="form.get('password')['errors']['required']">Пароль не может быть пустым</span>
+      <span *ngIf="form.get('password')['errors']['minlength'] && !form.get('password')['errors']['required']">
+        Пароль не может быть меньше {{form.get('password')['errors']['minlength']['requiredLength']}} символов.
+        Сейчас {{form.get('password')['errors']['minlength']['actualLength']}}.
+      </span>
+    </span>
   </div>
-  <div class="form-group has-success">
+
+  <div class="form-group"
+       [ngClass]="{'has-error': form.get('name').invalid && form.get('name').touched}">
     <label for="name">Имя</label>
     <input
       type="text"
@@ -30,31 +46,28 @@
       placeholder="Введите имя"
       formControlName="name"
     >
-    <span class="form-help-text">Success message.</span>
+    <span class="form-help-text" *ngIf="form.get('name').invalid && form.get('name').touched">
+      <span *ngIf="form.get('name')['errors']['required']">Имя не может быть пустым</span>
+    </span>
   </div>
-  <div class="form-group has-success">
-    <label for="nickName">Nick</label>
-    <input
-      type="text"
-      class="form-control underlined"
-      id="nickName"
-      placeholder="Введите nickname"
-      formControlName="nickName"
-    >
-    <span class="form-help-text">Success message.</span>
-  </div>
-  <div class="form-group has-error">
+
+  <div class="form-group"
+       [ngClass]="{'has-error': form.get('dateBirthday').invalid && form.get('dateBirthday').touched}">
     <label for="dateBirthday">Birthday</label>
     <input
       type="date"
       class="form-control underlined"
       id="dateBirthday"
-      placeholder="Введите date of birthday"
+      placeholder="Введите дату рождения"
       formControlName="dateBirthday"
     >
-    <span class="form-help-text">Error message.</span>
+    <span class="form-help-text" *ngIf="form.get('dateBirthday').invalid && form.get('dateBirthday').touched">
+      <span *ngIf="form.get('dateBirthday')['errors']['required']">Дата рождения не может быть пустым</span>
+    </span>
   </div>
-  <div class="form-group">
+
+  <div class="form-group"
+       [ngClass]="{'has-error': form.get('agree').invalid && form.get('agree').touched}">
     <label for="agree">
       <input class="checkbox" id="agree" type="checkbox" formControlName="agree">
       <span>Согласен с правилами</span>
@@ -63,12 +76,13 @@
   <div class="form-group">
     <button [disabled] = "form.invalid" type="submit" class="btn btn-block btn-primary">Зарегистрироваться</button>
   </div>
+
   <div class="form-group">
     <p class="text-muted text-xs-center">
       Уже есть аккаунт?
-      <a routerLink="/login">
+      <a [routerLink]="'/login'">
         Войти!
       </a>
     </p>
-  </div>
+  </div>'
 </form>
