--- a/frontend/src/main/frontend/src/app/system/system.component.html
+++ b/frontend/src/main/frontend/src/app/system/system.component.html
@@ -10,13 +10,13 @@
           <li class="profile dropdown">
             <a class="nav-link dropdown-toggle" href="#" role="button">
                                 <span class="name">
-                                    Здравствуйте, Ирина
+                                    Hello, Ivan Pavliuchenko
                                 </span>
             </a>
             <div class="dropdown-menu profile-dropdown-menu">
-              <a class="dropdown-item" href="#"> <i class="fa fa-gear icon"></i>Сделать запись</a>
+              <a class="dropdown-item" href="#"> <i class="fa fa-gear icon"></i>Create diagram</a>
               <div class="dropdown-divider"></div>
-              <a class="dropdown-item" href="#"><i class="fa fa-power-off icon"></i>Выйти</a>
+              <a class="dropdown-item" href="#"><i class="fa fa-power-off icon"></i>Log out</a>
             </div>
           </li>
         </ul>
@@ -35,7 +35,7 @@
               <span class="l l4"></span>
               <span class="l l5"></span>
             </div>
-            Бухгалтерия
+            CodeGen
           </div>
         </div>
         <nav class="menu">
@@ -45,12 +45,6 @@
             </li>
             <li>
               <a [routerLink]="'/system/account'"> <i class="fa fa-flash"></i> Account </a>
-            </li>
-            <li>
-              <a href="#"> <i class="fa fa-archive"></i> Планирование </a>
-            </li>
-            <li>
-              <a href="#"> <i class="fa fa-plus-square"></i> Запись </a>
             </li>
           </ul>
         </nav>
