--- a/frontend/src/main/frontend/src/app/auth/auth.component.html
+++ b/frontend/src/main/frontend/src/app/auth/auth.component.html
@@ -10,7 +10,7 @@
             <span class="l l4"></span>
             <span class="l l5"></span>
           </div>
-          Генератор Java кода
+          Java Code Generator
         </h1>
       </header>
       <div class="auth-content">
