--- a/frontend/src/main/frontend/src/app/auth/registration/registration.component.html
+++ b/frontend/src/main/frontend/src/app/auth/registration/registration.component.html
@@ -1,4 +1,4 @@
-<p class="text-xs-center">Регистрация для получения доступа</p>
+<p class="text-xs-center">Registration for access</p>
 <form [formGroup]="form" (ngSubmit)="onSubmit()">
 
   <div class="form-group"
@@ -8,49 +8,49 @@
       type="text"
       class="form-control underlined"
       id="username"
-      placeholder="Введите email"
+      placeholder="Enter your email"
       formControlName="username"
     >
     <span class="form-help-text" *ngIf="form.get('username').invalid && form.get('username').touched">
-      <span *ngIf="form.get('username')['errors']['required']">Email не может быть пустым</span>
-      <span *ngIf="form.get('username')['errors']['email'] && !form.get('username')['errors']['required']">Введите правильный email</span>
+      <span *ngIf="form.get('username')['errors']['required']">Email can not be empty</span>
+      <span *ngIf="form.get('username')['errors']['email'] && !form.get('username')['errors']['required']">Enter the correct email</span>
       <span *ngIf="!form.get('username')['errors']['required'] &&
                    !form.get('username')['errors']['email'] &&
-                   form.get('username')['errors']['forbiddenEmail']">Email уже занят</span>
+                   form.get('username')['errors']['forbiddenEmail']">Email already exists</span>
     </span>
   </div>
 
   <div class="form-group"
        [ngClass]="{'has-error': form.get('password').invalid && form.get('password').touched}">
-    <label for="password">Пароль</label>
+    <label for="password">Password</label>
     <input
       type="password"
       class="form-control underlined"
       id="password"
-      placeholder="Введите пароль"
+      placeholder="Create a password"
       formControlName="password"
     >
     <span class="form-help-text" *ngIf="form.get('password').invalid && form.get('password').touched">
-      <span *ngIf="form.get('password')['errors']['required']">Пароль не может быть пустым</span>
+      <span *ngIf="form.get('password')['errors']['required']">Password can not be empty</span>
       <span *ngIf="form.get('password')['errors']['minlength'] && !form.get('password')['errors']['required']">
-        Пароль не может быть меньше {{form.get('password')['errors']['minlength']['requiredLength']}} символов.
-        Сейчас {{form.get('password')['errors']['minlength']['actualLength']}}.
+        Password can not be empty less than {{form.get('password')['errors']['minlength']['requiredLength']}} symbols.
+        Now: {{form.get('password')['errors']['minlength']['actualLength']}}.
       </span>
     </span>
   </div>
 
   <div class="form-group"
        [ngClass]="{'has-error': form.get('name').invalid && form.get('name').touched}">
-    <label for="name">Имя</label>
+    <label for="name">Name</label>
     <input
       type="text"
       class="form-control underlined"
       id="name"
-      placeholder="Введите имя"
+      placeholder="Enter your name"
       formControlName="name"
     >
     <span class="form-help-text" *ngIf="form.get('name').invalid && form.get('name').touched">
-      <span *ngIf="form.get('name')['errors']['required']">Имя не может быть пустым</span>
+      <span *ngIf="form.get('name')['errors']['required']">Name can not be empty</span>
     </span>
   </div>
 
@@ -61,11 +61,11 @@
       type="date"
       class="form-control underlined"
       id="dateBirthday"
-      placeholder="Введите дату рождения"
+      placeholder="Enter your date of birthday"
       formControlName="dateBirthday"
     >
     <span class="form-help-text" *ngIf="form.get('dateBirthday').invalid && form.get('dateBirthday').touched">
-      <span *ngIf="form.get('dateBirthday')['errors']['required']">Дата рождения не может быть пустым</span>
+      <span *ngIf="form.get('dateBirthday')['errors']['required']">Date of birthday can not be empty</span>
     </span>
   </div>
 
@@ -73,18 +73,18 @@
        [ngClass]="{'has-error': form.get('agree').invalid && form.get('agree').touched}">
     <label for="agree">
       <input class="checkbox" id="agree" type="checkbox" formControlName="agree">
-      <span>Согласен с правилами</span>
+      <span>I agree with the rules</span>
     </label>
   </div>
   <div class="form-group">
-    <button [disabled] = "form.invalid" type="submit" class="btn btn-block btn-primary">Зарегистрироваться</button>
+    <button [disabled] = "form.invalid" type="submit" class="btn btn-block btn-primary">Sign Up</button>
   </div>
 
   <div class="form-group">
     <p class="text-muted text-xs-center">
-      Уже есть аккаунт?
+      Already have an account?
       <a [routerLink]="'/login'">
-        Войти!
+        Log in!
       </a>
     </p>
   </div>
