frontend: add system sidebar component

--- a/frontend/src/main/frontend/src/app/auth/login/login.component.html
+++ b/frontend/src/main/frontend/src/app/auth/login/login.component.html
@@ -11,7 +11,7 @@
       type="text"
       class="form-control underlined"
       id="email"
-      placeholder="Введите ваш email"
+      placeholder="Enter your email"
       formControlName="email"
     >
     <span class="form-help-text" *ngIf="form.get('email').invalid && form.get('email').touched">
@@ -26,7 +26,7 @@
       type="password"
       class="form-control underlined"
       id="password"
-      placeholder="Пароль"
+      placeholder="Password"
       formControlName="password"
     >
     <span class="form-help-text" *ngIf="form.get('password').invalid && form.get('password').touched">
