--- a/frontend/src/main/frontend/src/app/system/system.component.html
+++ b/frontend/src/main/frontend/src/app/system/system.component.html
@@ -23,34 +23,7 @@
       </div>
     </header>
     <!--HEADER-->
-    <!--SIDEBAR-->
-    <aside class="sidebar">
-      <div class="sidebar-container">
-        <div class="sidebar-header">
-          <div class="brand">
-            <div class="logo">
-              <span class="l l1"></span>
-              <span class="l l2"></span>
-              <span class="l l3"></span>
-              <span class="l l4"></span>
-              <span class="l l5"></span>
-            </div>
-            CodeGen
-          </div>
-        </div>
-        <nav class="menu">
-          <ul class="nav metismenu">
-            <li class="active">
-              <a [routerLink]="'/system/diagrams'"> <i class="fa fa-building-o"></i> Diagrams </a>
-            </li>
-            <li>
-              <a [routerLink]="'/system/account'"> <i class="fa fa-flash"></i> Account </a>
-            </li>
-          </ul>
-        </nav>
-      </div>
-    </aside>
-    <!--SIDEBAR-->
+    <app-sidebar></app-sidebar>
     <!--CONTENT-->
     <router-outlet></router-outlet>
     <!--CONTENT-->
