--- a/frontend/src/main/frontend/src/app/system/system.component.html
+++ b/frontend/src/main/frontend/src/app/system/system.component.html
@@ -1,28 +1,6 @@
 <div class="main-wrapper">
   <div class="app">
-    <!--HEADER-->
-    <header class="header">
-      <div class="header-block header-block-search">
-        12:12:12
-      </div>
-      <div class="header-block header-block-nav">
-        <ul class="nav-profile">
-          <li class="profile dropdown">
-            <a class="nav-link dropdown-toggle" href="#" role="button">
-                                <span class="name">
-                                    Hello, Ivan Pavliuchenko
-                                </span>
-            </a>
-            <div class="dropdown-menu profile-dropdown-menu">
-              <a class="dropdown-item" href="#"> <i class="fa fa-gear icon"></i>Create diagram</a>
-              <div class="dropdown-divider"></div>
-              <a class="dropdown-item" href="#"><i class="fa fa-power-off icon"></i>Log out</a>
-            </div>
-          </li>
-        </ul>
-      </div>
-    </header>
-    <!--HEADER-->
+    <app-header></app-header>
     <app-sidebar></app-sidebar>
     <!--CONTENT-->
     <router-outlet></router-outlet>
